--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
     </nav>
     
     <div class="main-visual">
-      <div class="main-visual-content"></div>
+      <div class="main-visual-content">
+        <p class="main-visual-text">
+          The world.............<br />
+          ...............<br />
+          ..................page.
+        </p>
+        <p class="main-visual-name">
+          St.Augustine
+        </p>
+      </div>
     </div>
     
     <div class="main">
