--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/6880002198.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>MySite</title>
   </head>
@@ -12,6 +13,11 @@
           CARAVAN
         </a>
       </h1>
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
     
     <nav>
@@ -109,8 +115,51 @@
             </section>
           </div>
         </div>
+        <div class="pagination">
+          <p><<</p>
+          <p><</p>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
+          <p>></p>
+          <p>>></p>
+        </div>
       </section>
-      <div class="sidebar"></div>
+      <div class="sidebar">
+        <section class="popular">
+          <h2 class="popular-heading common-heading">Popular</h2>
+          <div class="sidebar-contents">
+            <p class="popular-text">aaaaaaaaa<br>bbbbbbbbb</p>
+            <p class="popular-text">aaaaaaaaa<br>bbbbbbbbb</p>
+            <p class="popular-text">aaaaaaaaa<br>bbbbbbbbb</p>
+            <p class="popular-text">aaaaaaaaa<br>bbbbbbbbb</p>
+            <p class="popular-text">aaaaaaaaa<br>bbbbbbbbb</p>
+          </div>
+        </section>
+        <section class="instagram">
+          <h2 class="instagram-heading common-heading">Instafram</h2>
+          <div class="sidebar-contents">
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+          </div>
+        </section>
+        <section class="categories">
+          <h2 class="categories-heading common-heading">Categories</h2>
+          <div class="sidebar-contents">
+            <p class="categories-text">Technology(15)</p>
+            <p class="categories-text">Business(23)</p>
+            <p class="categories-text">Entertainment(12)</p>
+            <p class="categories-text">Nature(32)</p>
+            <p class="categories-text">Education(9)</p>
+            <p class="categories-text">Adventure(23)</p>
+            <p class="categories-text">Communication(14)</p>
+          </div>
+          </section>
+      </div>
     </main>
     
     <footer>
